src/objects/Apttus_CMConfig__AgreementUsagePriceTier__c.object
<CustomObject>
    <description>Represents a single entry in an agreement usage price tier</description>
    <fields>
        <fullName>APTS_Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free Vend</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>List Price Override</fullName>
                </value>
                <value>
                    <fullName>Tier Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__CommitmentQuantity__c</fullName>
        <description>The quantity commitment for the period</description>
        <inlineHelpText>The quantity commitment for the period</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Dimension1Value__c</fullName>
        <description>The value for the first dimension</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Dimension2Value__c</fullName>
        <description>The value for the second dimension</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FlatPrice__c</fullName>
        <description>The flat price for the tier or period</description>
        <inlineHelpText>The flat price for the tier or period</inlineHelpText>
        <label>Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the tier is included</description>
        <inlineHelpText>Indicates whether the tier is included</inlineHelpText>
        <label>Is Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineItemId__c</fullName>
        <description>ID of the associated agreement line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Usage Price Tiers</relationshipLabel>
        <relationshipName>UsagePriceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PeriodEndDate__c</fullName>
        <description>The usage period end date</description>
        <inlineHelpText>The usage period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PeriodStartDate__c</fullName>
        <description>The usage period start date</description>
        <inlineHelpText>The usage period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated matrix</description>
        <inlineHelpText>ID of the associated matrix</inlineHelpText>
        <label>Price Matrix</label>
        <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
        <relationshipLabel>Agreement Usage Price Tiers</relationshipLabel>
        <relationshipName>AgreementUsagePriceTiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Sequence__c</fullName>
        <description>The tier entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>Tier End Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>Tier Start Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__UsageRate__c</fullName>
        <description>The usage rate for the tier or period</description>
        <inlineHelpText>The usage rate for the tier or period</inlineHelpText>
        <label>Usage Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Agreement Usage Price Tier</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Usage Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>